use sql query to create PYPL dataframe

--- a/etf_analyzer.ipynb
+++ b/etf_analyzer.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "source": [
     "# Importing the required libraries and dependencies\r\n",
     "import numpy as np\r\n",
@@ -141,7 +141,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 4
     }
    ],
    "metadata": {}
@@ -175,13 +175,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "source": [
-    "# Write a SQL query to SELECT all of the data from the PYPL table\n",
-    "query = # YOUR CODE HERE\n",
-    "\n",
-    "# Use the query to read the PYPL data into a Pandas DataFrame\n",
-    "pypl_dataframe = # YOUR CODE HERE\n"
+    "# Write a SQL query to SELECT all of the data from the PYPL table\r\n",
+    "query = \"\"\"\r\n",
+    "    SELECT * FROM PYPL\r\n",
+    "\"\"\"\r\n",
+    "\r\n",
+    "# Use the query to read the PYPL data into a Pandas DataFrame\r\n",
+    "column_list = ['time', 'open', 'high', 'low', 'close', 'volume', 'daily_returns']\r\n",
+    "pypl_dataframe = pd.DataFrame(engine.execute(query), columns=column_list)"
    ],
    "outputs": [],
    "metadata": {}
@@ -195,22 +198,232 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "source": [
-    "# View the first 5 rows of the DataFrame.\n",
-    "# YOUR CODE HERE\n"
+    "# View the first 5 rows of the DataFrame.\r\n",
+    "display(pypl_dataframe.head())"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": [
+       "                         time   open   high    low  close   volume  \\\n",
+       "0  2016-12-16 00:00:00.000000  39.90  39.90  39.12  39.32  7298861   \n",
+       "1  2016-12-19 00:00:00.000000  39.40  39.80  39.11  39.45  3436478   \n",
+       "2  2016-12-20 00:00:00.000000  39.61  39.74  39.26  39.74  2940991   \n",
+       "3  2016-12-21 00:00:00.000000  39.84  40.74  39.82  40.09  5826704   \n",
+       "4  2016-12-22 00:00:00.000000  40.04  40.09  39.54  39.68  4338385   \n",
+       "\n",
+       "   daily_returns  \n",
+       "0      -0.005564  \n",
+       "1       0.003306  \n",
+       "2       0.007351  \n",
+       "3       0.008807  \n",
+       "4      -0.010227  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>volume</th>\n",
+       "      <th>daily_returns</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2016-12-16 00:00:00.000000</td>\n",
+       "      <td>39.90</td>\n",
+       "      <td>39.90</td>\n",
+       "      <td>39.12</td>\n",
+       "      <td>39.32</td>\n",
+       "      <td>7298861</td>\n",
+       "      <td>-0.005564</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2016-12-19 00:00:00.000000</td>\n",
+       "      <td>39.40</td>\n",
+       "      <td>39.80</td>\n",
+       "      <td>39.11</td>\n",
+       "      <td>39.45</td>\n",
+       "      <td>3436478</td>\n",
+       "      <td>0.003306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2016-12-20 00:00:00.000000</td>\n",
+       "      <td>39.61</td>\n",
+       "      <td>39.74</td>\n",
+       "      <td>39.26</td>\n",
+       "      <td>39.74</td>\n",
+       "      <td>2940991</td>\n",
+       "      <td>0.007351</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2016-12-21 00:00:00.000000</td>\n",
+       "      <td>39.84</td>\n",
+       "      <td>40.74</td>\n",
+       "      <td>39.82</td>\n",
+       "      <td>40.09</td>\n",
+       "      <td>5826704</td>\n",
+       "      <td>0.008807</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2016-12-22 00:00:00.000000</td>\n",
+       "      <td>40.04</td>\n",
+       "      <td>40.09</td>\n",
+       "      <td>39.54</td>\n",
+       "      <td>39.68</td>\n",
+       "      <td>4338385</td>\n",
+       "      <td>-0.010227</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {}
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "source": [
-    "# View the last 5 rows of the DataFrame.\n",
-    "# YOUR CODE HERE\n"
+    "# View the last 5 rows of the DataFrame.\r\n",
+    "display(pypl_dataframe.tail())"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": [
+       "                           time    open    high       low    close   volume  \\\n",
+       "994  2020-11-30 00:00:00.000000  212.51  215.83  207.0900  214.200  8992681   \n",
+       "995  2020-12-01 00:00:00.000000  217.15  220.57  214.3401  216.520  9148174   \n",
+       "996  2020-12-02 00:00:00.000000  215.60  215.75  210.5000  212.660  6414746   \n",
+       "997  2020-12-03 00:00:00.000000  213.33  216.93  213.1100  214.680  6463339   \n",
+       "998  2020-12-04 00:00:00.000000  214.88  217.28  213.0100  217.235  2118319   \n",
+       "\n",
+       "     daily_returns  \n",
+       "994       0.013629  \n",
+       "995       0.010831  \n",
+       "996      -0.017827  \n",
+       "997       0.009499  \n",
+       "998       0.011901  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>volume</th>\n",
+       "      <th>daily_returns</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>994</th>\n",
+       "      <td>2020-11-30 00:00:00.000000</td>\n",
+       "      <td>212.51</td>\n",
+       "      <td>215.83</td>\n",
+       "      <td>207.0900</td>\n",
+       "      <td>214.200</td>\n",
+       "      <td>8992681</td>\n",
+       "      <td>0.013629</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>995</th>\n",
+       "      <td>2020-12-01 00:00:00.000000</td>\n",
+       "      <td>217.15</td>\n",
+       "      <td>220.57</td>\n",
+       "      <td>214.3401</td>\n",
+       "      <td>216.520</td>\n",
+       "      <td>9148174</td>\n",
+       "      <td>0.010831</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>2020-12-02 00:00:00.000000</td>\n",
+       "      <td>215.60</td>\n",
+       "      <td>215.75</td>\n",
+       "      <td>210.5000</td>\n",
+       "      <td>212.660</td>\n",
+       "      <td>6414746</td>\n",
+       "      <td>-0.017827</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>2020-12-03 00:00:00.000000</td>\n",
+       "      <td>213.33</td>\n",
+       "      <td>216.93</td>\n",
+       "      <td>213.1100</td>\n",
+       "      <td>214.680</td>\n",
+       "      <td>6463339</td>\n",
+       "      <td>0.009499</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>2020-12-04 00:00:00.000000</td>\n",
+       "      <td>214.88</td>\n",
+       "      <td>217.28</td>\n",
+       "      <td>213.0100</td>\n",
+       "      <td>217.235</td>\n",
+       "      <td>2118319</td>\n",
+       "      <td>0.011901</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {}
+    }
+   ],
    "metadata": {}
   },
   {
@@ -224,8 +437,8 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# Create an interactive visualization with hvplot to plot the daily returns for PYPL.\n",
-    "# YOUR CODE HERE\n"
+    "# Create an interactive visualization with hvplot to plot the daily returns for PYPL.\r\n",
+    "# YOUR CODE HERE\r\n"
    ],
    "outputs": [],
    "metadata": {}
@@ -241,8 +454,8 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# Create an interactive visaulization with hvplot to plot the cumulative returns for PYPL.\n",
-    "# YOUR CODE HERE\n"
+    "# Create an interactive visaulization with hvplot to plot the cumulative returns for PYPL.\r\n",
+    "# YOUR CODE HERE\r\n"
    ],
    "outputs": [],
    "metadata": {}
@@ -297,15 +510,15 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# Write a SQL SELECT statement to select the time and close columns \n",
-    "# where the PYPL closing price was higher than 200.0.\n",
-    "query = # YOUR CODE HERE\n",
-    "\n",
-    "# Using the query, read the data from the database into a Pandas DataFrame\n",
-    "pypl_higher_than_200 = # YOUR CODE HERE\n",
-    "\n",
-    "# Review the resulting DataFrame\n",
-    "# YOUR CODE HERE\n"
+    "# Write a SQL SELECT statement to select the time and close columns \r\n",
+    "# where the PYPL closing price was higher than 200.0.\r\n",
+    "query = # YOUR CODE HERE\r\n",
+    "\r\n",
+    "# Using the query, read the data from the database into a Pandas DataFrame\r\n",
+    "pypl_higher_than_200 = # YOUR CODE HERE\r\n",
+    "\r\n",
+    "# Review the resulting DataFrame\r\n",
+    "# YOUR CODE HERE\r\n"
    ],
    "outputs": [],
    "metadata": {
@@ -333,15 +546,15 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# Write a SQL SELECT statement to select the time and daily_returns columns\n",
-    "# Sort the results in descending order and return only the top 10 return values\n",
-    "query = # YOUR CODE HERE\n",
-    "\n",
-    "# Using the query, read the data from the database into a Pandas DataFrame\n",
-    "pypl_top_10_returns = # YOUR CODE HERE\n",
-    "\n",
-    "# Review the resulting DataFrame\n",
-    "# YOUR CODE HERE\n"
+    "# Write a SQL SELECT statement to select the time and daily_returns columns\r\n",
+    "# Sort the results in descending order and return only the top 10 return values\r\n",
+    "query = # YOUR CODE HERE\r\n",
+    "\r\n",
+    "# Using the query, read the data from the database into a Pandas DataFrame\r\n",
+    "pypl_top_10_returns = # YOUR CODE HERE\r\n",
+    "\r\n",
+    "# Review the resulting DataFrame\r\n",
+    "# YOUR CODE HERE\r\n"
    ],
    "outputs": [],
    "metadata": {}
@@ -398,15 +611,15 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# Wreate a SQL query to join each table in the portfolio into a single DataFrame \n",
-    "# Use the time column from each table as the basis for the join\n",
-    "query = # YOUR CODE HERE\n",
-    "\n",
-    "# Using the query, read the data from the database into a Pandas DataFrame\n",
-    "etf_portfolio = # YOUR CODE HERE\n",
-    "\n",
-    "# Review the resulting DataFrame\n",
-    "# YOUR CODE HERE\n"
+    "# Wreate a SQL query to join each table in the portfolio into a single DataFrame \r\n",
+    "# Use the time column from each table as the basis for the join\r\n",
+    "query = # YOUR CODE HERE\r\n",
+    "\r\n",
+    "# Using the query, read the data from the database into a Pandas DataFrame\r\n",
+    "etf_portfolio = # YOUR CODE HERE\r\n",
+    "\r\n",
+    "# Review the resulting DataFrame\r\n",
+    "# YOUR CODE HERE\r\n"
    ],
    "outputs": [],
    "metadata": {
@@ -424,11 +637,11 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# Create a DataFrame that displays the mean value of the “daily_returns” columns for all four assets.\n",
-    "etf_portfolio_returns = # YOUR CODE HERE\n",
-    "\n",
-    "# Review the resulting DataFrame\n",
-    "# YOUR CODE HERE\n"
+    "# Create a DataFrame that displays the mean value of the “daily_returns” columns for all four assets.\r\n",
+    "etf_portfolio_returns = # YOUR CODE HERE\r\n",
+    "\r\n",
+    "# Review the resulting DataFrame\r\n",
+    "# YOUR CODE HERE\r\n"
    ],
    "outputs": [],
    "metadata": {
@@ -446,12 +659,12 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# Use the average daily returns provided by the etf_portfolio_returns DataFrame \n",
-    "# to calculate the annualized return for the portfolio. \n",
-    "annualized_etf_portfolio_returns = # YOUR CODE HERE\n",
-    "\n",
-    "# Display the annualized return value of the ETF portfolio.\n",
-    "# YOUR CODE HERE\n"
+    "# Use the average daily returns provided by the etf_portfolio_returns DataFrame \r\n",
+    "# to calculate the annualized return for the portfolio. \r\n",
+    "annualized_etf_portfolio_returns = # YOUR CODE HERE\r\n",
+    "\r\n",
+    "# Display the annualized return value of the ETF portfolio.\r\n",
+    "# YOUR CODE HERE\r\n"
    ],
    "outputs": [],
    "metadata": {}
@@ -467,12 +680,12 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# Use the average daily returns provided by the etf_portfolio_returns DataFrame \n",
-    "# to calculate the cumulative returns\n",
-    "etf_cumulative_returns = # YOUR CODE HERE\n",
-    "\n",
-    "# Display the final cumulative return value\n",
-    "# YOUR CODE HERE\n"
+    "# Use the average daily returns provided by the etf_portfolio_returns DataFrame \r\n",
+    "# to calculate the cumulative returns\r\n",
+    "etf_cumulative_returns = # YOUR CODE HERE\r\n",
+    "\r\n",
+    "# Display the final cumulative return value\r\n",
+    "# YOUR CODE HERE\r\n"
    ],
    "outputs": [],
    "metadata": {}
@@ -488,8 +701,8 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# Using hvplot, create an interactive line plot that visualizes the ETF portfolios cumulative return values.\n",
-    "# YOUR CODE HERE\n"
+    "# Using hvplot, create an interactive line plot that visualizes the ETF portfolios cumulative return values.\r\n",
+    "# YOUR CODE HERE\r\n"
    ],
    "outputs": [],
    "metadata": {}
