--- a/etf_analyzer.ipynb
+++ b/etf_analyzer.ipynb
@@ -2244,21 +2244,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-08-05 00:00:00.000000</td>\n",
+       "      <td>202.92</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-08-06 00:00:00.000000</td>\n",
+       "      <td>204.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-08-25 00:00:00.000000</td>\n",
+       "      <td>201.71</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-08-26 00:00:00.000000</td>\n",
+       "      <td>203.53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-08-27 00:00:00.000000</td>\n",
+       "      <td>204.34</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            0       1\n",
+       "0  2020-08-05 00:00:00.000000  202.92\n",
+       "1  2020-08-06 00:00:00.000000  204.09\n",
+       "2  2020-08-25 00:00:00.000000  201.71\n",
+       "3  2020-08-26 00:00:00.000000  203.53\n",
+       "4  2020-08-27 00:00:00.000000  204.34"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# Write a SQL SELECT statement to select the time and close columns \r\n",
-    "# where the PYPL closing price was higher than 200.0.\r\n",
-    "query = # YOUR CODE HERE\r\n",
-    "\r\n",
-    "# Using the query, read the data from the database into a Pandas DataFrame\r\n",
-    "pypl_higher_than_200 = # YOUR CODE HERE\r\n",
-    "\r\n",
-    "# Review the resulting DataFrame\r\n",
-    "# YOUR CODE HERE\r\n"
+    "# Write a SQL SELECT statement to select the time and close columns \n",
+    "# where the PYPL closing price was higher than 200.0.\n",
+    "query = \"\"\"\n",
+    "SELECT time, close\n",
+    "FROM PYPL\n",
+    "WHERE close > 200.0\n",
+    "\"\"\"\n",
+    "\n",
+    "# Using the query, read the data from the database into a Pandas DataFrame\n",
+    "pypl_higher_than_200 = pd.DataFrame(engine.execute(query))\n",
+    "\n",
+    "# Review the resulting DataFrame\n",
+    "display(pypl_higher_than_200.head())\n"
    ]
   },
   {
@@ -2280,19 +2350,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-03-24 00:00:00.000000</td>\n",
+       "      <td>0.140981</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-05-07 00:00:00.000000</td>\n",
+       "      <td>0.140318</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-03-13 00:00:00.000000</td>\n",
+       "      <td>0.138700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-04-06 00:00:00.000000</td>\n",
+       "      <td>0.100877</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2018-10-19 00:00:00.000000</td>\n",
+       "      <td>0.093371</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2019-10-24 00:00:00.000000</td>\n",
+       "      <td>0.085912</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2020-11-04 00:00:00.000000</td>\n",
+       "      <td>0.080986</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2020-03-10 00:00:00.000000</td>\n",
+       "      <td>0.080863</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2020-04-22 00:00:00.000000</td>\n",
+       "      <td>0.075321</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2018-12-26 00:00:00.000000</td>\n",
+       "      <td>0.074656</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            0         1\n",
+       "0  2020-03-24 00:00:00.000000  0.140981\n",
+       "1  2020-05-07 00:00:00.000000  0.140318\n",
+       "2  2020-03-13 00:00:00.000000  0.138700\n",
+       "3  2020-04-06 00:00:00.000000  0.100877\n",
+       "4  2018-10-19 00:00:00.000000  0.093371\n",
+       "5  2019-10-24 00:00:00.000000  0.085912\n",
+       "6  2020-11-04 00:00:00.000000  0.080986\n",
+       "7  2020-03-10 00:00:00.000000  0.080863\n",
+       "8  2020-04-22 00:00:00.000000  0.075321\n",
+       "9  2018-12-26 00:00:00.000000  0.074656"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# Write a SQL SELECT statement to select the time and daily_returns columns\r\n",
-    "# Sort the results in descending order and return only the top 10 return values\r\n",
-    "query = # YOUR CODE HERE\r\n",
-    "\r\n",
-    "# Using the query, read the data from the database into a Pandas DataFrame\r\n",
-    "pypl_top_10_returns = # YOUR CODE HERE\r\n",
-    "\r\n",
-    "# Review the resulting DataFrame\r\n",
-    "# YOUR CODE HERE\r\n"
+    "# Write a SQL SELECT statement to select the time and daily_returns columns\n",
+    "# Sort the results in descending order and return only the top 10 return values\n",
+    "query = \"\"\"\n",
+    "SELECT time, daily_returns\n",
+    "FROM PYPL\n",
+    "ORDER BY daily_returns DESC\n",
+    "LIMIT 10\n",
+    "\"\"\"\n",
+    "\n",
+    "# Using the query, read the data from the database into a Pandas DataFrame\n",
+    "pypl_top_10_returns = pd.DataFrame(engine.execute(query))\n",
+    "\n",
+    "# Review the resulting DataFrame\n",
+    "display(pypl_top_10_returns)\n"
    ]
   },
   {
