added display statements

--- a/etf_analyzer.ipynb
+++ b/etf_analyzer.ipynb
@@ -2519,20 +2519,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Wreate a SQL query to join each table in the portfolio into a single DataFrame \r\n",
-    "# Use the time column from each table as the basis for the join\r\n",
-    "query = # YOUR CODE HERE\r\n",
-    "\r\n",
-    "# Using the query, read the data from the database into a Pandas DataFrame\r\n",
-    "etf_portfolio = # YOUR CODE HERE\r\n",
-    "\r\n",
-    "# Review the resulting DataFrame\r\n",
-    "# YOUR CODE HERE\r\n"
+    "# Wreate a SQL query to join each table in the portfolio into a single DataFrame \n",
+    "# Use the time column from each table as the basis for the join\n",
+    "query = # YOUR CODE HERE\n",
+    "\n",
+    "# Using the query, read the data from the database into a Pandas DataFrame\n",
+    "etf_portfolio = # YOUR CODE HERE\n",
+    "\n",
+    "# Review the resulting DataFrame\n",
+    "display(etf_portfolio.head())"
    ]
   },
   {
@@ -2545,16 +2543,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a DataFrame that displays the mean value of the “daily_returns” columns for all four assets.\r\n",
-    "etf_portfolio_returns = # YOUR CODE HERE\r\n",
-    "\r\n",
-    "# Review the resulting DataFrame\r\n",
-    "# YOUR CODE HERE\r\n"
+    "# Create a DataFrame that displays the mean value of the “daily_returns” columns for all four assets.\n",
+    "etf_portfolio_returns = # YOUR CODE HERE\n",
+    "\n",
+    "# Review the resulting DataFrame\n",
+    "display(etf_portfolio_returns.head())"
    ]
   },
   {
