calculated cumulative returns

--- a/etf_analyzer.ipynb
+++ b/etf_analyzer.ipynb
@@ -2512,7 +2512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2536,49 +2536,50 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>GDOT_daily_returns</th>\n",
+       "      <th>GSGDOT_daily_returns</th>\n",
+       "      <th>PYPLGDOT_daily_returns</th>\n",
+       "      <th>SQGDOT_daily_returns</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>time</th>\n",
-       "      <th>GDOT</th>\n",
-       "      <th>GS</th>\n",
-       "      <th>PYPL</th>\n",
-       "      <th>SQ</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2016-12-16 00:00:00.000000</td>\n",
+       "      <th>2016-12-16 00:00:00.000000</th>\n",
        "      <td>-0.023218</td>\n",
        "      <td>-0.016708</td>\n",
        "      <td>-0.005564</td>\n",
        "      <td>0.017339</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2016-12-19 00:00:00.000000</td>\n",
+       "      <th>2016-12-19 00:00:00.000000</th>\n",
        "      <td>-0.007923</td>\n",
        "      <td>0.000795</td>\n",
        "      <td>0.003306</td>\n",
        "      <td>-0.001043</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2016-12-20 00:00:00.000000</td>\n",
+       "      <th>2016-12-20 00:00:00.000000</th>\n",
        "      <td>0.001261</td>\n",
        "      <td>0.016602</td>\n",
        "      <td>0.007351</td>\n",
        "      <td>0.009053</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2016-12-21 00:00:00.000000</td>\n",
+       "      <th>2016-12-21 00:00:00.000000</th>\n",
        "      <td>0.001679</td>\n",
        "      <td>-0.006911</td>\n",
        "      <td>0.008807</td>\n",
        "      <td>-0.007591</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2016-12-22 00:00:00.000000</td>\n",
+       "      <th>2016-12-22 00:00:00.000000</th>\n",
        "      <td>0.006077</td>\n",
        "      <td>-0.005178</td>\n",
        "      <td>-0.010227</td>\n",
@@ -2589,12 +2590,21 @@
        "</div>"
       ],
       "text/plain": [
-       "                         time      GDOT        GS      PYPL        SQ\n",
-       "0  2016-12-16 00:00:00.000000 -0.023218 -0.016708 -0.005564  0.017339\n",
-       "1  2016-12-19 00:00:00.000000 -0.007923  0.000795  0.003306 -0.001043\n",
-       "2  2016-12-20 00:00:00.000000  0.001261  0.016602  0.007351  0.009053\n",
-       "3  2016-12-21 00:00:00.000000  0.001679 -0.006911  0.008807 -0.007591\n",
-       "4  2016-12-22 00:00:00.000000  0.006077 -0.005178 -0.010227 -0.023644"
+       "                            GDOT_daily_returns  GSGDOT_daily_returns  \\\n",
+       "time                                                                   \n",
+       "2016-12-16 00:00:00.000000           -0.023218             -0.016708   \n",
+       "2016-12-19 00:00:00.000000           -0.007923              0.000795   \n",
+       "2016-12-20 00:00:00.000000            0.001261              0.016602   \n",
+       "2016-12-21 00:00:00.000000            0.001679             -0.006911   \n",
+       "2016-12-22 00:00:00.000000            0.006077             -0.005178   \n",
+       "\n",
+       "                            PYPLGDOT_daily_returns  SQGDOT_daily_returns  \n",
+       "time                                                                      \n",
+       "2016-12-16 00:00:00.000000               -0.005564              0.017339  \n",
+       "2016-12-19 00:00:00.000000                0.003306             -0.001043  \n",
+       "2016-12-20 00:00:00.000000                0.007351              0.009053  \n",
+       "2016-12-21 00:00:00.000000                0.008807             -0.007591  \n",
+       "2016-12-22 00:00:00.000000               -0.010227             -0.023644  "
       ]
      },
      "metadata": {},
@@ -2618,7 +2628,7 @@
     "    engine.execute(query), \n",
     "    columns=['time', 'GDOT_daily_returns', 'GSGDOT_daily_returns', 'PYPLGDOT_daily_returns', 'SQGDOT_daily_returns']\n",
     ")\n",
-    "\n",
+    "etf_portfolio.set_index('time', inplace=True)\n",
     "# Review the resulting DataFrame\n",
     "display(etf_portfolio.head())"
    ]
@@ -2632,15 +2642,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mean_daily_return</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>time</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2016-12-16 00:00:00.000000</th>\n",
+       "      <td>-0.007038</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-12-19 00:00:00.000000</th>\n",
+       "      <td>-0.001216</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-12-20 00:00:00.000000</th>\n",
+       "      <td>0.008567</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-12-21 00:00:00.000000</th>\n",
+       "      <td>-0.001004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-12-22 00:00:00.000000</th>\n",
+       "      <td>-0.008243</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-11-30 00:00:00.000000</th>\n",
+       "      <td>-0.014635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-12-01 00:00:00.000000</th>\n",
+       "      <td>-0.003990</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-12-02 00:00:00.000000</th>\n",
+       "      <td>-0.006288</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-12-03 00:00:00.000000</th>\n",
+       "      <td>0.011246</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-12-04 00:00:00.000000</th>\n",
+       "      <td>0.009108</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>999 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            mean_daily_return\n",
+       "time                                         \n",
+       "2016-12-16 00:00:00.000000          -0.007038\n",
+       "2016-12-19 00:00:00.000000          -0.001216\n",
+       "2016-12-20 00:00:00.000000           0.008567\n",
+       "2016-12-21 00:00:00.000000          -0.001004\n",
+       "2016-12-22 00:00:00.000000          -0.008243\n",
+       "...                                       ...\n",
+       "2020-11-30 00:00:00.000000          -0.014635\n",
+       "2020-12-01 00:00:00.000000          -0.003990\n",
+       "2020-12-02 00:00:00.000000          -0.006288\n",
+       "2020-12-03 00:00:00.000000           0.011246\n",
+       "2020-12-04 00:00:00.000000           0.009108\n",
+       "\n",
+       "[999 rows x 1 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Create a DataFrame that displays the mean value of the “daily_returns” columns for all four assets.\n",
-    "etf_portfolio_returns = # YOUR CODE HERE\n",
+    "etf_portfolio_returns = pd.DataFrame(etf_portfolio.mean(axis=1), columns=['mean_daily_return'])\n",
     "\n",
     "# Review the resulting DataFrame\n",
-    "display(etf_portfolio_returns.head())"
+    "display(etf_portfolio_returns)"
    ]
   },
   {
@@ -2652,16 +2762,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mean_daily_return</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>time</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2016-12-16 00:00:00.000000</th>\n",
+       "      <td>-0.111720</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-12-19 00:00:00.000000</th>\n",
+       "      <td>-0.019309</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-12-20 00:00:00.000000</th>\n",
+       "      <td>0.135992</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-12-21 00:00:00.000000</th>\n",
+       "      <td>-0.015937</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-12-22 00:00:00.000000</th>\n",
+       "      <td>-0.130852</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-11-30 00:00:00.000000</th>\n",
+       "      <td>-0.232324</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-12-01 00:00:00.000000</th>\n",
+       "      <td>-0.063347</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-12-02 00:00:00.000000</th>\n",
+       "      <td>-0.099823</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-12-03 00:00:00.000000</th>\n",
+       "      <td>0.178525</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-12-04 00:00:00.000000</th>\n",
+       "      <td>0.144589</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>999 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            mean_daily_return\n",
+       "time                                         \n",
+       "2016-12-16 00:00:00.000000          -0.111720\n",
+       "2016-12-19 00:00:00.000000          -0.019309\n",
+       "2016-12-20 00:00:00.000000           0.135992\n",
+       "2016-12-21 00:00:00.000000          -0.015937\n",
+       "2016-12-22 00:00:00.000000          -0.130852\n",
+       "...                                       ...\n",
+       "2020-11-30 00:00:00.000000          -0.232324\n",
+       "2020-12-01 00:00:00.000000          -0.063347\n",
+       "2020-12-02 00:00:00.000000          -0.099823\n",
+       "2020-12-03 00:00:00.000000           0.178525\n",
+       "2020-12-04 00:00:00.000000           0.144589\n",
+       "\n",
+       "[999 rows x 1 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# Use the average daily returns provided by the etf_portfolio_returns DataFrame \r\n",
-    "# to calculate the annualized return for the portfolio. \r\n",
-    "annualized_etf_portfolio_returns = # YOUR CODE HERE\r\n",
-    "\r\n",
-    "# Display the annualized return value of the ETF portfolio.\r\n",
-    "# YOUR CODE HERE\r\n"
+    "# Use the average daily returns provided by the etf_portfolio_returns DataFrame \n",
+    "# to calculate the annualized return for the portfolio. \n",
+    "annualized_etf_portfolio_returns = etf_portfolio_returns * np.sqrt(252)\n",
+    "\n",
+    "# Display the annualized return value of the ETF portfolio.\n",
+    "display(annualized_etf_portfolio_returns)"
    ]
   },
   {
@@ -2673,16 +2883,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cumulative_return</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>time</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2020-12-04 00:00:00.000000</th>\n",
+       "      <td>1.737438</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            cumulative_return\n",
+       "time                                         \n",
+       "2020-12-04 00:00:00.000000           1.737438"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# Use the average daily returns provided by the etf_portfolio_returns DataFrame \r\n",
-    "# to calculate the cumulative returns\r\n",
-    "etf_cumulative_returns = # YOUR CODE HERE\r\n",
-    "\r\n",
-    "# Display the final cumulative return value\r\n",
-    "# YOUR CODE HERE\r\n"
+    "# Use the average daily returns provided by the etf_portfolio_returns DataFrame \n",
+    "# to calculate the cumulative returns\n",
+    "#etf_cumulative_returns = pd.DataFrame(etf_portfolio_returns.cumsum(), columns=['cumulative_return'])\n",
+    "etf_cumulative_returns = etf_portfolio_returns.cumsum()\n",
+    "etf_cumulative_returns.rename(columns={'mean_daily_return': 'cumulative_return'}, inplace=True)\n",
+    "\n",
+    "# Display the final cumulative return value\n",
+    "display(etf_cumulative_returns.tail(1))\n"
    ]
   },
   {
@@ -2698,16 +2957,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Using hvplot, create an interactive line plot that visualizes the ETF portfolios cumulative return values.\r\n",
-    "# YOUR CODE HERE\r\n"
+    "# Using hvplot, create an interactive line plot that visualizes the ETF portfolios cumulative return values.\n",
+    "et"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
